--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,14 +211,14 @@ h6,
 /*** Hero Header ***/
 .hero-header {
     margin-bottom: 6rem;
-    padding: 18rem 0;
-    background:
+    padding: 20rem 0;
+/*     background:
         url(../img/blob-top-left.png),
         url(../img/blob-top-right.png),
         url(../img/blob-bottom-left.png),
         url(../img/blob-bottom-right.png),
         url(../img/blob-center.png),
-        url(../img/bg-bottom.png);
+        url(../img/bg-bottom.png); */
     background-position:
         left 0px top 0px,
         right 0px top 0px,
